--- a/src/components/Button/Button.module.css
+++ b/src/components/Button/Button.module.css
@@ -1,8 +1,10 @@
 .button {
-  width: 100%;
+  height: 42px;
   cursor: pointer;
   border-radius: 8px;
   padding: 14px 30px;
+  transform: translateY(0);
+  transition: all 150ms ease;
 }
 
 .primary {
@@ -23,8 +25,14 @@
   gap: 6px;
 }
 
-@media (min-width: 992px) {
-  .button {
-    width: max-content;
-  }
+.button:hover {
+  transform: translateY(-3px);
+}
+
+.primary:hover {
+  box-shadow: 0 6px 6px 0px #65288842;
+}
+
+.transparent:hover {
+  box-shadow: 0 6px 3px 0px #c7c7c74d;
 }
