--- a/src/sections/Hero/Hero.module.css
+++ b/src/sections/Hero/Hero.module.css
@@ -1,4 +1,5 @@
 .section {
+  margin-top: 90px;
   padding: 0 18px;
 }
 
@@ -8,4 +9,10 @@
 
 .copy {
   margin-bottom: 15px;
+}
+
+.actions {
+  gap: 10px;
+  display: flex;
+  align-items: center;
 }
