--- a/src/sections/Experience/Experience.module.css
+++ b/src/sections/Experience/Experience.module.css
@@ -21,7 +21,7 @@
 
 .textCenter {
   text-align: center;
-  margin-bottom: 64px;
+  margin-bottom: 34px;
 }
 
 .title {
@@ -61,7 +61,7 @@
 .timelineDot {
   width: 12px;
   height: 12px;
-  background-color: #555;
+  background-color: var(--color-primary);
   border-radius: 50%;
   position: absolute;
   left: -26px;
